src/css/style.css
@import 'header.css';
@import 'main/main.css';
@import 'footer.css';

@import 'helper/fancyAnchor.css';

:root {
  --white: #fff;
  --black: #111;

  --fg: var(--black);
  --bg: var(--white);
  --header-bg: #fff9;

  --pri: #4a85c9;
  --sec: #c0242b;

  --g1: #1f1f1f;
  --g2: #2f2f2f;
  --g5: #5f5f5f;
  --g7: #7f7f7f;
  --g9: #9f9f9f;
  --gd: #dfdfdf;
  --gf7: #f7f7f7;

  --red-d: hsl(8, 100%, 40%);
  --red: hsl(8, 100%, 50%);
  --red-l: hsl(8, 100%, 60%);

  --green-d: hsl(128, 100%, 40%);
  --green: hsl(128, 100%, 50%);
  --green-l: hsl(128, 100%, 70%);

  --rxs: 0.15rem;
  --rs: 0.3rem;
  --rm: 0.5rem;

  --padding-sides: 3rem;
}

@media (prefers-color-scheme: dark) {
  :root {
    --fg: var(--white);
    --bg: var(--black);
    --header-bg: #0006;

    --g1: #dfdfdf;
    --g2: #cfcfcf;
    --g5: #9f9f9f;
    --g9: #5f5f5f;
    --gd: #2f2f2f;
    --gf7: #1f1f1f;
  }
}

html {
  scroll-behavior: smooth;
  background: var(--bg);
  font-family:
    'Segoe UI',
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Montserrat,
    Roboto,
    'Helvetica Neue',
    Arial,
    sans-serif;
  color: var(--fg);
}

body {
  display: flex;
  flex-direction: column;
  background-color: var(--gf7);
  margin: 0;
  min-height: 100dvh;
}

::-webkit-scrollbar {
  width: 13px;
  height: 13px;
}

::-webkit-scrollbar-thumb {
  background: var(--g7);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--g2);
}

::-webkit-scrollbar-corner {
  background: transparent;
}

::selection {
  background: var(--fg);
  color: var(--bg);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

p,
span {
  max-width: 40em;
}

a {
  color: var(--g2);
}

a:is(:hover, :focus-visible) {
  color: var(--fg);
}

button {
  cursor: pointer;
  font-family: inherit;
}

button:disabled {
  cursor: initial;
}

img {
  vertical-align: top;
}

input[type='color'] {
  cursor: pointer;
  display: block;
  border: 0;
  border-radius: var(--rs);
  margin-top: 0.5rem;
  padding: 0;
  /* padding: 0 1.5rem; */
  width: 8rem;
  height: 3rem;
}

::-moz-color-swatch {
  border: 0;
}

::-webkit-color-swatch {
  border: 0;
}

/* HELPER CLASSES */

.sr-only {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

.has-overlay {
  position: relative;
}

.overlay {
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}

.unselectable {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.button {
  display: flex;
  align-items: center;
  background-color: transparent;
  border: 1px solid var(--g9);
  border-radius: var(--rs);
  font-weight: 600;
  text-align: center;
  text-decoration: none;
  color: var(--fg);
  padding: 0.75rem 1rem;
  height: 2.5rem;
  transition:
    background 150ms,
    border-color 150ms,
    color 150ms,
    filter 150ms;
}

.button:is(:hover, :focus-visible) {
  background-color: var(--fg);
  border-color: transparent;
  color: var(--bg);
}

.button:hover:active {
  filter: brightness(0.8);
}

.button:disabled {
  background-color: transparent;
  border: 1px solid var(--g9);
  color: var(--g7);
}

.button:disabled:is(:hover, :focus-visible) {
  border-color: initial;
}

.button:disabled:hover:active {
  filter: initial;
}

.list {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a.badge {
  display: inline-block;
  text-decoration: none;
}

@media only screen and (width < 45em) {
  :root {
    --padding-sides: 1rem;
  }
}

@media only screen and (width < 30em) {
  html {
    font-size: 0.875rem;
  }
}

